Implemented several UI test suites which use both UI framework and API client